# mqtthome

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml_
src/: config.rs  main.rs  mqtt_client.rs  state.rs  web_server.rs
src/devices/: device.rs  mod.rs  shelly_dimmer_2.rs
