[package]
name = "mqtthome"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3.31"
rumqttc = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yml = "0.0.12"
tokio = { version = "1.42.0", features = ["full"] }
